Fix spacing on author bio

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -641,19 +641,14 @@ strong {
 /* SPECIFIC FOR OCCASIONAL PAPERS #4
 ============================================================================= */
 
-/* Styling for Ancient Worlds Now logo and tagline */
-.awn-logo {
-  max-width: 300px;
-  margin-top: 6rem;
+.quire-contributor__details p {
+  margin-bottom: 0 !important;
 }
+.quire-contributor__details p:first-child {
+  text-indent: 0;
+}
+
 @media print {
-  #copyright img[alt="awn-logo"] {
-    height: 1.125in;
-    max-height: inherit;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-  }
   #copyright .quire-page__content {
     column-count: 2;
     max-width: none;
